--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3>Hajj</h3>
+										<h3>Haj</h3>
 										<p>This pilgrimage fosters a deep sense of spiritual renewal, community, and equality among Muslims worldwide.</p>
 									</header>
 								</article>
